packages/flutter/lib/flutter_breez_liquid_bindings_generated.dart


  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_refundablesPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_refundables');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_refundables =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_refundablesPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_auth(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req_data,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_auth(
      ptr,
      req_data,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_authPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_auth');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_auth =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_authPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_pay(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_pay(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_payPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_pay');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_pay =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_payPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_withdraw(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_withdraw(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_withdrawPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_withdraw');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_withdraw =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_lnurl_withdrawPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_pay_onchain(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_pay_onchain(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_pay_onchainPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_pay_onchain');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_pay_onchain =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_pay_onchainPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_buy_bitcoin(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_buy_bitcoin(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_buy_bitcoinPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_buy_bitcoin');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_buy_bitcoin =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_buy_bitcoinPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_pay_onchain(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_pay_onchain(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_pay_onchainPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_pay_onchain');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_pay_onchain =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_pay_onchainPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_receive_payment(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_receive_payment(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_receive_paymentPtr =
      _lookup<
              ffi.NativeFunction<
                  RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_receive_payment');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_receive_payment =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_receive_paymentPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_refund(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_refund(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_refundPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_refund');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_refund =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_refundPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_send_payment(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_send_payment(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_send_paymentPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_send_payment');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_send_payment =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_prepare_send_paymentPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_receive_payment(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_receive_payment(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_receive_paymentPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_receive_payment');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_receive_payment =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_receive_paymentPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_recommended_fees(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_recommended_fees(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_recommended_feesPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_recommended_fees');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_recommended_fees =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_recommended_feesPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_refund(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_refund(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_refundPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_refund');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_refund =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_refundPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();
